<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.android_m.egg.MLand
        android:id="@+id/world"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <FrameLayout
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#a0000000"
        android:clickable="true"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/play_button"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:background="@drawable/ripplebg"
            android:clickable="true"
            android:focusable="true"
            android:onClick="startButtonPressed">

            <ImageView
                android:id="@+id/play_button_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/play"
                android:tint="#000000" />

            <TextView
                android:id="@+id/play_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0"
                android:textColor="#000000"
                android:textSize="40dp" />
        </FrameLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/player_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/player_minus_button"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="playerMinus"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/minus" />

        <LinearLayout
            android:id="@+id/scores"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="12dp" />

        <ImageButton
            android:id="@+id/player_plus_button"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="playerPlus"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/plus" />
    </LinearLayout>
</FrameLayout>
