...
        <com.dede.android_eggs.ui.EggPreference
            android:targetClass="@string/target_class_android_p"
            app:icon="@drawable/p_icon"
            app:key="key_egg_p"
            app:summary="@string/p_app_name"
            app:supportAdaptiveIcon="true"
            app:title="@string/title_android_p" />

        <com.dede.android_eggs.ui.EggPreference
            app:icon="@drawable/ic_android_oreo"
            app:key="key_egg_o_1"
            app:summary="@string/o_app_name"
            app:supportAdaptiveIcon="true"
...
        <com.dede.android_eggs.ui.EggPreference
            android:targetClass="@string/target_class_android_m"
            app:icon="@drawable/ic_android_marshmallow"
            app:key="key_egg_m"
            app:summary="@string/m_mland"
            app:supportAdaptiveIcon="true"
            app:title="@string/title_android_m"
            app:versionComment="@string/version_comment_android_m" />

        <com.dede.android_eggs.ui.EggPreference
            android:targetClass="@string/target_class_android_l"
            app:icon="@drawable/ic_android_lollipop"
            app:key="key_egg_l"
...
