<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2018 The Android Open Source Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<com.android_p.egg.paint.CutoutAvoidingToolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:gravity="left"
    android:background="@drawable/toolbar_bg"
    android:elevation="20dp"
    >

    <Space
        android:tag="cutoutLeft"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:tag="beforeCutout"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/btnBrush"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tint="@color/toolbar_icon_color"
            android:background="@drawable/toolbar_button_bg"
            />

        <ImageButton
            android:id="@+id/btnColor"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tint="@color/toolbar_icon_color"
            android:background="@drawable/toolbar_button_bg"
            />

        <ImageButton
            android:id="@+id/btnSample"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toolbar_button_bg"
            android:tint="@color/toolbar_icon_color"
            android:src="@drawable/ic_dropper" />

    </LinearLayout>

    <Space
        android:tag="cutoutCenter"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:tag="afterCutout"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/btnZen"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toolbar_button_bg"
            android:tint="@color/toolbar_icon_color"
            android:src="@drawable/ic_hourglass" />

        <ImageButton
            android:id="@+id/btnClear"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/toolbar_button_bg"
            android:tint="@color/toolbar_icon_color"
            android:src="@drawable/ic_clear" />

    </LinearLayout>

    <Space
        android:tag="cutoutRight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        />

</com.android_p.egg.paint.CutoutAvoidingToolbar>